# python-installer-qt-gui

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  SECURITY.md  frozen.spec  index.html  main.py  make.bat  pyproject.toml  robots.txt  setup.nsi  sitemap.xml  uninstall.nsi  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: autoupdate_python_versions.yml  ci_cd.yml  label.yml
doc/: .vale.ini  Makefile  make.bat
doc/source/: ansys_python_manager.rst  conf.py  contributing.rst  index.rst  installer.rst  user_guide.rst
doc/source/ansys_python_manager/: ansys_python_manager.md
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
linux/debian/: ansys_python_manager_prebuid.desktop  fpm-options-debian  installer.sh  postInstallScript.sh
linux/manual_build/: Manual_build_files
linux/non-debian/: ansys_python_manager.desktop  build_Fedora.sh  build_centOS.sh  fpm-options-centos  fpm-options-fedora  installer_CentOS.sh  postInstallScript_CentOS.sh  redhat_linux.txt.txt  updater_CentOS.sh
scripts/: requirements.txt  update.py  update_python_versions.py
src/ansys/tools/installer/: VERSION  __init__.py  __main__.py  auto_updater.py  common.py  configure.py  configure_json.py  constants.py  create_virtual_environment.py  find_python.py  installed_table.py  installer.py  linux_functions.py  main.py  misc.py  progress_bar.py  uninstall.py  vscode.py  windows_functions.py
src/ansys/tools/installer/assets/: python-installer.pfx
src/ansys/tools/installer/assets/scripts/: uninstaller_ubuntu.sh  uninstaller_yum.sh
tests/: conftest.py  test_auto_updater.py  test_gui.py  test_linux_functions.py  test_metadata.py
version/: index.html
version/0.1/: .buildinfo  announcement.html  contributing.html  genindex.html  index.html  installer.html  objects.inv  search.html  searchindex.js
version/0.1/_sources/: contributing.rst.txt  index.rst.txt  installer.rst.txt
version/0.1/_static/: documentation_options.js
version/0.2/: .buildinfo  contributing.html  genindex.html  index.html  installer.html  objects.inv  search.html  searchindex.js  user_guide.html
version/0.2/_sources/: installer.rst.txt  user_guide.rst.txt
version/0.2/_static/: documentation_options.js
version/0.3/: .buildinfo  announcement.html  contributing.html  genindex.html  index.html  installer.html  objects.inv  search.html  searchindex.js  user_guide.html
version/0.3/_static/: documentation_options.js  search.json
version/0.4/: contributing.html  genindex.html  index.html  installer.html  objects.inv  search.html  searchindex.js  user_guide.html
version/0.4/_static/: documentation_options.js  search.json
version/0.5/: contributing.html  index.html  objects.inv  search.html  user_guide.html
version/0.6/: index.html  installer.html  objects.inv  search.html
version/0.6/_sources/: user_guide.rst.txt
version/dev/: .buildinfo  contributing.html  genindex.html  index.html  installer.html  objects.inv  search.html  searchindex.js  user_guide.html
version/dev/_sources/: index.rst.txt
version/dev/_static/: documentation_options.js  search.json
version/stable/: .buildinfo  contributing.html  genindex.html  index.html  installer.html  objects.inv  search.html  searchindex.js  user_guide.html
version/stable/_static/: documentation_options.js  search.json
