[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-tools-installer"
description = "Python QT app or CLI for installing Python and PyAnsys."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
authors = [{ name = "Ansys, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "Ansys, Inc.", email = "pyansys.core@ansys.com" }]
dependencies = [
    "packaging",
    "PyGithub",
    "appdirs",
    "requests",
    "PySide6",
    "ansys-tools-path",
    "setuptools; python_version >= '3.12'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]


[project.optional-dependencies]
tests = [
    "packaging==24.2",
    "PyGithub==2.5.0",
    "appdirs==1.4.4",
    "requests==2.32.3",
    "PySide6==6.8.1",
    "ansys-tools-path==0.7.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-qt==4.4.0",
    "setuptools==75.6.0",
]
doc = [
    "Sphinx==8.1.3",
    "ansys-sphinx-theme==1.2.3",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.6.1",
    "sphinx_toolbox==3.8.1",
]
freeze = [
    "pyinstaller==6.11.1",
    "packaging==24.2",
    "PyGithub==2.5.0",
    "appdirs==1.4.4",
    "requests==2.32.3",
    "PySide6==6.8.1",
    "ansys-tools-path==0.7.1",
]

[tool.flit.module]
name = "ansys.tools.installer"

[project.urls]
Source = "https://github.com/ansys/python-installer-qt-gui"
Issues = "https://github.com/ansys/python-installer-qt-gui/issues"
Discussions = "https://github.com/ansys/python-installer-qt-gui/discussions"
Documentation = "https://installer.docs.pyansys.com/"
Releases = "https://github.com/ansys/python-installer-qt-gui/releases"

[project.scripts]
ansys_python_installer = "ansys.tools.installer:open_gui"

[tool.pytest.ini_options]
junit_family = "legacy"
testpaths = "tests"
qt_api = "pyside6"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = '*.spec'
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"
quiet-level = 3
