[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-tools-installer"
description = "Python QT app or CLI for installing Python and PyAnsys."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "Ansys, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "Ansys, Inc.", email = "pyansys.core@ansys.com" }]
dependencies = [
    "packaging",
    "PyGithub",
    "appdirs",
    "requests",
    "PySide6",
    "ansys-tools-path",
    "setuptools; python_version >= '3.12'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]


[project.optional-dependencies]
tests = [
    "packaging==25.0",
    "PyGithub==2.6.1",
    "appdirs==1.4.4",
    "requests==2.32.4",
    "PySide6==6.9.1",
    "ansys-tools-path==0.7.3",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-qt==4.5.0",
    "setuptools==80.9.0",
]
doc = [
    "Sphinx==8.1.3",
    "ansys-sphinx-theme==1.5.3",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.6.1",
    "sphinx_toolbox==4.0.0",
]
freeze = [
    "pyinstaller==6.14.2",
    "packaging==25.0",
    "PyGithub==2.6.1",
    "appdirs==1.4.4",
    "requests==2.32.4",
    "PySide6==6.9.1",
    "ansys-tools-path==0.7.3",
]

[tool.flit.module]
name = "ansys.tools.installer"

[project.urls]
Source = "https://github.com/ansys/python-installer-qt-gui"
Issues = "https://github.com/ansys/python-installer-qt-gui/issues"
Discussions = "https://github.com/ansys/python-installer-qt-gui/discussions"
Documentation = "https://installer.docs.pyansys.com/"
Releases = "https://github.com/ansys/python-installer-qt-gui/releases"

[project.scripts]
ansys_python_installer = "ansys.tools.installer:open_gui"

[tool.pytest.ini_options]
junit_family = "legacy"
testpaths = "tests"
qt_api = "pyside6"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = '*.spec'
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"
quiet-level = 3
